--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,13 @@ html {
 .scrollable::-webkit-scrollbar-thumb:hover {
   @apply bg-gray-400;
 }
+
+.no-spinners::-webkit-outer-spin-button,
+.no-spinners::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.no-spinners {
+  -moz-appearance: textfield;
+}
